# Thames-Water-Demo-21July

./: INTEGRATION_GUIDE.md  README.md  app.py  embedded_dashboard.html  integration_example.py  main_app.py  package.json  pyproject.toml  server.js  setup_embedded.py  smart_acquisition_component.py
.streamlit/: config.toml
prompts/: enhanced_query_generation.txt  intelligent_query_generation.txt  market_summary.txt  report_insights.txt  risk_flags.txt  sourcing_strategy.txt  strategic_outlook.txt  swot.txt  thematic_analysis.txt  timeline_events.txt
utils/: __init__.py  category_specific_analysis.py  enhanced_pdf_report.py  export_report.py  gpt_analysis.py  gpt_analysis_enhanced.py  intelligent_query.py  personalized_scanning.py  professional_pdf_report.py  scrape_url.py  search_google.py  search_options.py
