[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-api-python-client>=2.175.0",
    "newspaper3k>=0.2.8",
    "openai>=1.93.0",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "streamlit-timeline>=0.0.2",
    "streamlit>=1.46.1",
    "trafilatura>=2.0.0",
    "pillow>=11.3.0",
]
